--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
         <p>This is the first file in my new git repo.</p>
         <p>A new line in our file!</p>
         <div><img src="img_hello_git.jpg" alt="Hello Git" style="width: 100%; max-width: 640px" /></div>
+        <br />
+        <p>
+            Author: Aguycodes
+            Email: aguycodes25@gmail.com
+        </p>
     </body>
 </html>
